<!DOCTYPE resources [<!ENTITY appname "Drama Short">]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="home">Home</string>
    <string name="for_you">For you</string>
    <string name="my_list">My List</string>
    <string name="rewards">Rewards</string>
    <string name="profile">Profile</string>
    <string name="earn_rewards">Earn Rewards</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="my_coupons">My Coupons</string>
    <string name="feedback">Feedback</string>
    <string name="language">Language</string>
    <string name="setting">Setting</string>
    <string name="about_us">About Us</string>
    <string name="default_web_client_id">149223249796-6spojutsfnh042b6g9vvhrmkblmac6v5.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="sigh_out">Sigh Out</string>
    <string name="rate_us">Rate Us</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="no_items">No items</string>
    <string name="no_duplicate_files">No files here.</string>
    <string name="my_wallet">My Wallet</string>
    <string name="transaction_history">Transaction History</string>
    <string name="episode_unlocked">Episode Unlocked</string>
    <string name="episode_auto_unlock">Episode on auto unlock</string>
    <string name="reward_coin_history">Reward Coin History</string>
    <string name="official_website">https//:www.google.com</string>
    <string name="content_collaboration">Content Collaboration</string>
    <string name="follow_us_on_instagram">Follow Us on Instagram</string>
    <string name="join_us">Join Us</string>
    <string name="rewards_coins">Rewards Coins</string>
    <string name="subscribe">Subscribe</string>
    <string name="refill">Refill</string>
    <string name="store">Store</string>
    <string name="search_history">search History</string>
    <string name="earn_coins">Earn Coins</string>
    <string name="bind_email">Bind Email</string>
    <string name="change_email_address">Change email address</string>
    <string name="ok">Ok</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="verify">Verify</string>
    <string name="term_condition"><![CDATA[Term & Condition]]></string>

    <string name="your_opinion_n_matter_for_us">Your opinion matters to us!</string>
    <string name="feedback_msg_desc1">We would like your review to improve our application\'s \n quality and serve you better as per your \n expectations.</string>
    <string name="feedback_submit_btn">Submit</string>
    <string name="feedback_submit_hint">Please tell us your opinion as a feedback for this app so we can locate and try to solve your problem faster</string>
    <string name="no_thanks">No thanks</string>
    <string name="feedback_send_us">Send us</string>
    <string name="feedback_your_feedback">Share Your Feedback</string>
    <string name="feedback_feedback_improve">Your opinion matters! Tell us what you think so we can keep improving.</string>
    <string name="feedback_what_category_does_your_request_fall_under">Under what category does your request fall?</string>
    <string name="feedback_please_select">Please select…</string>
    <string name="feedback_what_type_of_feature_do_you_require">What feature would you like to see?</string>
    <string name="feedback_typing_something_here">Typing Something here....</string>
    <string name="feedback_upload_reference_images_optional">Upload Reference images (Optional)</string>
    <string name="feedback_upload_images">Upload Images</string>
    <string name="submit">Submit</string>
    <!--    <string name="facebook_app_id">1226052828571345</string>-->
    <string name="facebook_app_id">709754541676544</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="country_code_india">+91</string>
    <string name="get_otp">Get OTP</string>
    <string name="terms_and_conditions_text"><![CDATA[By continuing you agree to our Terms of Use and Privacy Policy.]]></string>
    <string name="internet_connection_not_available">Internet connection not available.</string>
    <string name="your_10_digit_mobile_number">Your 10-digit Mobile Number</string>
    <string name="internet_connection_is_offline">Internet connection is offline</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="sent_to_mobile_number">sent to +91 %s</string>
    <string name="edit"><u>Edit</u></string>
    <string name="submit_otp">Submit OTP</string>
    <string name="didnt_receive_an_otp">Didn\'t receive an OTP?</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="enter_the_4_digit_otp">Enter the 4 digit OTP</string>
    <string name="resend_in_seconds">Resend in %s seconds</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="top_10_on">Top 10 on &appname;</string>
    <string name="specials">&appname; Specials</string>
    <string name="trending_now">Trending Now</string>
    <string name="top_originals">Top &appname; Originals</string>
    <string name="top_10_new_releases">Top 10 New Releases</string>
    <string name="just_launched">Just Launched</string>
    <string name="hidden_identity">Hidden Identity</string>
    <string name="new_and_hot"><![CDATA[New & Hot]]></string>
    <string name="revenge_and_dhoka"><![CDATA[Revenge & Dhoka]]></string>
    <string name="all_dramas">All Dramas</string>
    <string name="premium">Premium</string>
    <string name="choose_your_premium_plan">Choose Your Premium Plan</string>
    <string name="users_bought_premium_plan_today">%s users bought premium plan today</string>
    <string name="rupee_text">\u20B9%d</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="history">History</string>
    <string name="premium_plan">Premium Plan</string>
    <string name="view_benefits_below">View benefits below</string>
    <string name="premium_benefits">Premium Benefits</string>
    <string name="unlimited_access">Unlimited\nAccess</string>
    <string name="ads_free">Ads\nFree</string>
    <string name="hd_quality">HD \nQuality</string>
    <string name="multiple_logins">Multiple \nLogins</string>
    <string name="share_the_app">Share the App</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="contact_us">Contact us</string>
    <string name="premium_plan_settings">Premium Plan Settings</string>
    <string name="love_affairs">Love Affairs</string>
    <string name="active">Active</string>
    <string name="enter_valid_otp">Enter valid OTP</string>
    <string name="nothing_here_yet">Nothing here yet..</string>
    <string name="browse_dramas">Browse Dramas</string>
    <string name="start_adding_your_favourite_dramas_to_see_them_here">Start adding your favourite dramas to see them here</string>
    <string name="start_watching_dramas_on_the_app_to_track_your_activities">Start watching dramas on the app to track your activities</string>
    <string name="otp_sent_successfully">OTP sent successfully.</string>
    <string name="share_app_text_title">&appname; brings you new shows daily - all in Full HD and 100% Ad-Free!</string>
    <string name="share_app_text_description">Start your Free Trial now</string>
    <string name="share_via">Share via</string>
    <string name="are_you_sure_you_want_to_contact_team">Are you sure you want to contact &appname; team?</string>
    <string name="contact_app_name">Contact &appname;</string>
    <string name="app_support">App Support | %s</string>
    <string name="contact">Contact</string>
    <string name="no_mail_apps_found">No mail apps found</string>
    <string name="version_text">V%s</string>
</resources>