<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image_sigh_in"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_mobile_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_right_margin"
        app:layout_constraintStart_toStartOf="@id/gl_left_margin">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@+id/tv_app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_app_name"
            style="@style/BodyLargeBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/app_name"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toTopOf="@+id/tl_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tl_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fontFamily="@font/ginto_normal_medium"
            android:text="@string/enter_your_mobile_number"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toTopOf="@+id/cv_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:padding="@dimen/_10sdp"
            app:cardBackgroundColor="@null"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_get_otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/card_view_border">

                <TextView
                    android:id="@+id/tv_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/country_code_india"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <View
                    android:id="@+id/v_phone"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:background="@color/colorMain"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_country_code"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_mobile_number"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:hint="@string/your_10_digit_mobile_number"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/v_phone"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_tick"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_get_otp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:backgroundTint="@color/button_background_tint"
            android:enabled="false"
            android:fontFamily="@font/ginto_normal_medium"
            android:padding="@dimen/_10sdp"
            android:text="@string/get_otp"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:textSize="14sp"
            app:cornerRadius="@dimen/_18sdp"
            app:layout_constraintBottom_toTopOf="@+id/tv_terms_and_conditions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tv_terms_and_conditions"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="@dimen/_26sdp"
            android:fontFamily="@font/ginto_normal_regular"
            android:gravity="center_horizontal"
            android:text="@string/terms_and_conditions_text"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/pb_get_otp_loader"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="8dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_in"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btn_get_otp"
            app:layout_constraintEnd_toEndOf="@+id/btn_get_otp"
            app:layout_constraintStart_toStartOf="@+id/btn_get_otp"
            app:layout_constraintTop_toTopOf="@+id/btn_get_otp"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.05" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_otp_container"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_right_margin"
        app:layout_constraintStart_toStartOf="@id/gl_left_margin">

        <ImageView
            android:id="@+id/iv_otp_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@+id/tv_otp_app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_otp_app_name"
            style="@style/BodyLargeBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/app_name"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toTopOf="@+id/tl_otp_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tl_otp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_14sdp"
            android:fontFamily="@font/ginto_normal_medium"
            android:text="@string/enter_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toTopOf="@+id/tv_sent_to_mobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_sent_to_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_14sdp"
            android:fontFamily="@font/ginto_normal_medium"
            android:text="@string/sent_to_mobile_number"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toTopOf="@+id/cv_otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_14sdp"
            app:layout_goneMarginStart="@dimen/_4sdp"
            android:fontFamily="@font/ginto_normal_medium"
            android:text="@string/edit"
            android:layout_marginStart="@dimen/_4sdp"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toTopOf="@+id/cv_otp"
            app:layout_constraintStart_toEndOf="@+id/tv_sent_to_mobile" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_otp"
            android:layout_width="0dp"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:padding="@dimen/_10sdp"
            app:cardBackgroundColor="@null"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toTopOf="@+id/cl_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/card_view_border">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_otp"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:hint="@string/enter_the_4_digit_otp"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            app:layout_constraintBottom_toTopOf="@+id/btn_submit_otp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/tv_otp_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/ginto_normal_regular"
            android:gravity="center_horizontal"
            android:text="@string/didnt_receive_an_otp"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/ginto_normal_regular"
            android:gravity="center_horizontal"
            android:text="@string/resend_otp"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_otp_hint" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit_otp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25sdp"
            android:backgroundTint="@color/button_background_tint"
            android:enabled="false"
            android:fontFamily="@font/ginto_normal_medium"
            android:padding="@dimen/_10sdp"
            android:text="@string/submit_otp"
            android:textAllCaps="false"
            android:textColor="@color/gray2"
            android:textSize="14sp"
            app:cornerRadius="@dimen/_18sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/pb_submit_otp_loader"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="8dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_in"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btn_submit_otp"
            app:layout_constraintEnd_toEndOf="@+id/btn_submit_otp"
            app:layout_constraintStart_toStartOf="@+id/btn_submit_otp"
            app:layout_constraintTop_toTopOf="@+id/btn_submit_otp"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.05" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>