<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8sdp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lav_empty_view"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="@dimen/_170sdp"
                android:layout_centerHorizontal="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/empty_img" />

            <TextView
                android:id="@+id/tv_nothing_here_yet"
                style="@style/BodySmallMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/nothing_here_yet"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toTopOf="@+id/tv_empty_view_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_empty_view_description"
                style="@style/BodySmallMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_24sdp"
                android:gravity="center_horizontal"
                android:text="@string/start_adding_your_favourite_dramas_to_see_them_here"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toTopOf="@+id/btn_browse_dramas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_browse_dramas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_80sdp"
                android:backgroundTint="@color/colorMain"
                android:padding="@dimen/_10sdp"
                android:text="@string/browse_dramas"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_my_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:clipToPadding="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>